--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -1,10 +1,11 @@
+apply plugin: 'com.android.application'
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
 
@@ -14,18 +15,16 @@ allprojects {
     }
 }
 
-apply plugin: 'com.android.application'
-
 
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "com.hyphenate.chatuidemo"
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 24
         multiDexEnabled true
     }
 
@@ -65,10 +64,20 @@ android {
 dependencies {
     compile project(':redpacketlibrary')
     compile project(':EaseUI')
-    compile fileTree(dir: 'libs', include: '*.jar', exclude: 'android-support-multidex.jar')
+    compile fileTree(include: '*.jar', exclude: 'android-support-multidex.jar', dir: 'libs')
     //考虑到在eclipse中,直接使用源码
-//    compile ('com.anthonycr.grant:permissions:1.0'){
-//        exclude module: 'support-v4'
-//    }
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    //    compile ('com.anthonycr.grant:permissions:1.0'){
+    //        exclude module: 'support-v4'
+    //    }
+//    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'org.codehaus.mojo.groovy.support:support:1.0-beta-3'
+}
+android {
+
+
+    configurations {
+        all*.exclude group: 'com.android.support', module: 'support-v4'
+        all*.exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
 }
