--- a/ChatDemoUI3.0/AndroidManifest.xml
+++ b/ChatDemoUI3.0/AndroidManifest.xml
@@ -49,12 +49,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="cn.ucai.superwechat.DemoApplication"
+        android:name=".DemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:name="cn.ucai.superwechat.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
@@ -62,7 +62,7 @@
 
         <!-- 开屏页 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.SplashActivity"
+            android:name=".ui.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide">
             <intent-filter>
@@ -74,185 +74,185 @@
 
         <!-- 登陆 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.LoginActivity"
+            android:name=".ui.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustResize|stateVisible"></activity>
+            android:windowSoftInputMode="adjustResize|stateVisible"/>
 
         <!-- 注册 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustResize|stateVisible"></activity>
+            android:windowSoftInputMode="adjustResize|stateVisible"/>
         <!-- 聊天页面 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ChatActivity"
+            android:name=".ui.ChatActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize"/>
         <!-- 添加好友 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.AddContactActivity"
+            android:name=".ui.AddContactActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateVisible"></activity>
+            android:windowSoftInputMode="stateVisible"/>
         <!-- 群组详情 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupDetailsActivity"
+            android:name=".ui.GroupDetailsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 群组列表 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupsActivity"
+            android:name=".ui.GroupsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
 
         <!-- 聊天室详情 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ChatRoomDetailsActivity"
+            android:name=".ui.ChatRoomDetailsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
 
         <!-- 新建群组 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.NewGroupActivity"
+            android:name=".ui.NewGroupActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
         <!-- 退出群组提示框 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ExitGroupDialog"
+            android:name=".ui.ExitGroupDialog"
             android:screenOrientation="portrait"
-            android:theme="@style/MyDialogStyleBottom"></activity>
+            android:theme="@style/MyDialogStyleBottom"/>
         <!-- 群组选人 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupPickContactsActivity"
+            android:name=".ui.GroupPickContactsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
         <activity
-            android:name="cn.ucai.superwechat.ui.PickAtUserActivity"
+            android:name=".ui.PickAtUserActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide" />
         <!-- 地图 -->
         <activity
             android:name="com.hyphenate.easeui.ui.EaseBaiduMapActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
 
         <!-- 新的朋友邀请消息页面 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.NewFriendsMsgActivity"
+            android:name=".ui.NewFriendsMsgActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 转发消息用户列表页面 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ForwardMessageActivity"
+            android:name=".ui.ForwardMessageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
         <!-- 自定义的contextmenu -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ContextMenuActivity"
+            android:name=".ui.ContextMenuActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/MyDialogStyle"></activity>
+            android:theme="@style/MyDialogStyle"/>
         <!-- 显示下载大图页面 -->
         <activity
             android:name="com.hyphenate.easeui.ui.EaseShowBigImageActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 下载文件 -->
         <activity
             android:name="com.hyphenate.easeui.ui.EaseShowNormalFileActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 黑名单 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.BlacklistActivity"
+            android:name=".ui.BlacklistActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
 
         <!-- 公开的群聊列表 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.PublicGroupsActivity"
+            android:name=".ui.PublicGroupsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
         <activity
-            android:name="cn.ucai.superwechat.ui.PublicChatRoomsActivity"
+            android:name=".ui.PublicChatRoomsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan"/>
 
         <!-- 语音通话 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.VoiceCallActivity"
+            android:name=".ui.VoiceCallActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/nornal_style"></activity>
+            android:theme="@style/nornal_style"/>
         <!-- 视频通话 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.VideoCallActivity"
+            android:name=".ui.VideoCallActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 群聊简单信息 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupSimpleDetailActivity"
+            android:name=".ui.GroupSimpleDetailActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <!-- 群组黑名单用户列表 -->
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupBlacklistActivity"
+            android:name=".ui.GroupBlacklistActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <activity
-            android:name="cn.ucai.superwechat.ui.GroupSearchMessageActivity"
+            android:name=".ui.GroupSearchMessageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
             android:windowSoftInputMode="stateVisible" />
         <activity
-            android:name="cn.ucai.superwechat.ui.PublicGroupsSeachActivity"
+            android:name=".ui.PublicGroupsSeachActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide"></activity>
+            android:theme="@style/horizontal_slide"/>
         <activity
-            android:name="cn.ucai.superwechat.ui.EditActivity"
+            android:name=".ui.EditActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateVisible"></activity>
+            android:windowSoftInputMode="stateVisible"/>
         <activity
             android:name="com.hyphenate.easeui.ui.EaseShowVideoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <!-- choose video -->
         <activity
-            android:name="cn.ucai.superwechat.ui.ImageGridActivity"
+            android:name=".ui.ImageGridActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
-            android:name="cn.ucai.superwechat.ui.RecorderVideoActivity"
+            android:name=".ui.RecorderVideoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <!-- upload error log -->
         <activity
-            android:name="cn.ucai.superwechat.ui.DiagnoseActivity"
+            android:name=".ui.DiagnoseActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
 
         <!-- iOS offline push nick -->
         <activity
-            android:name="cn.ucai.superwechat.ui.OfflinePushNickActivity"
+            android:name=".ui.OfflinePushNickActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <!-- robots list -->
         <activity
             android:name="cn.ucai.superwechat.ui.RobotsActivity"
@@ -421,17 +421,17 @@
         <!-- PushSDK:Push服务 -->
         <service
             android:name="com.huawei.android.pushagent.PushService"
-            android:process=":pushservice"></service>
+            android:process=":pushservice"/>
 
         <!-- huawei push end -->
 
         <service
             android:name="com.umeng.update.net.DownloadingService"
-            android:process=":DownloadingService"></service>
+            android:process=":DownloadingService"/>
 
         <activity
             android:name="com.umeng.update.UpdateDialogActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
         <!-- 设置环信应用的appkey -->
         <meta-data
