添加result及其工具类，加入okhttp、gson依赖

--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -6,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
@@ -20,6 +22,13 @@ allprojects {
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.1"
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okio:okio:1.10.0'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
+
 
     defaultConfig {
         applicationId "com.hyphenate.chatuidemo"
@@ -72,8 +81,8 @@ dependencies {
 //    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'org.codehaus.mojo.groovy.support:support:1.0-beta-3'
 }
-android {
 
+android {
 
     configurations {
         all*.exclude group: 'com.android.support', module: 'support-v4'
